[package]
name = "serde_token"
description = "Utility for transcoding a Serde deserializer into a sink of tokens."
version = "0.0.1"
authors = ["Sunny G <sunny.gonna@gmail.com>"]
repository = "https://github.com/sunny-g/serde_token"
categories = ["encoding", "parsing", "serde", "asynchronous"]
# readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
futures = "0.1.27"
serde = "1.0"
serde-transcode = "1.1"

[dev-dependencies]
serde_json = "1.0"
